// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptInstallServiceStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Let us install the latest version on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    It looks like the Accessibility Insights for Android Service on your device is either missing or out of date. We'll need to install the latest version.
  </React.Fragment>
  <DeviceDescription
    description="Super-Duper Gadget"
    isEmulator={false}
    marginBottom="16px"
    marginTop="16px"
  />
  <CustomizedPrimaryButton
    onClick={[Function]}
    text="Install"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptInstallServiceStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Let us install the latest version on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": null,
      "text": "Next",
    }
  }
>
  <React.Fragment>
    It looks like the Accessibility Insights for Android Service on your device is either missing or out of date. We'll need to install the latest version.
  </React.Fragment>
  <DeviceDescription
    description="Emulator Extraordinaire"
    isEmulator={true}
    marginBottom="16px"
    marginTop="16px"
  />
  <CustomizedPrimaryButton
    onClick={[Function]}
    text="Install"
  />
</AndroidSetupStepLayout>
`;
